Fixed horizontal scrollbar

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -161,3 +161,9 @@ button, .button {
         display: none;
     }
 }
+
+// Overflow
+.wrapper {
+    position: relative;
+    overflow-x: hidden;
+}
