--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -39,7 +39,6 @@
                 background-size: 122%;
                 background-position: 0% 83%;
                 background-repeat: no-repeat;
-                background-position: center bottom; 
             }
         }
 
